--- a/SKGL 2.0.5.2/SKGL 2.0.5.2.csproj
+++ b/SKGL 2.0.5.2/SKGL 2.0.5.2.csproj
@@ -52,8 +52,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="SKGL.cs" />
+    <Compile Include="BaseConfiguration.cs" />
+    <Compile Include="InternalCoreMethods.cs" />
+    <Compile Include="SerialKeyConfiguration.cs" />
+    <Compile Include="Generate.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Validate.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
