--- a/SKGL 2.0.5.2/SerialKeyGenerator.csproj
+++ b/SKGL 2.0.5.2/SerialKeyGenerator.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{3E42C239-69E0-4420-8133-898FA2CF135A}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>SKGL</RootNamespace>
-    <AssemblyName>SKGL</AssemblyName>
+    <RootNamespace>SerialKeyGenerator</RootNamespace>
+    <AssemblyName>SerialKeyGenerator</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <SccProjectName>SAK</SccProjectName>
